langtools/test/tools/javac/NonStaticFieldExpr1.out
NonStaticFieldExpr1.java:10:30: compiler.err.non-static.cant.be.ref: (- compiler.misc.kindname.variable), x
1 error
